# Audio-Visualizer

./: .npmrc  README.md  index.html  package-lock.json  package.json  vite.config.ts
.cargo/: config.toml
scripts/: stop-dev.ps1
src/: App.tsx  NavigationBar.tsx  StyleToolbar.tsx  audioPreview.ts  palettes.ts  settings.ts  styles.css  types.ts  导航栏ui.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/audio/: mod.rs
src/visualizers/: bars.ts  colors.ts  math.ts  particles.ts  wave.ts
