[package]
name = "audio_visualizer_widget"
version = "0.1.0"
description = "A Windows desktop audio visualizer widget."
authors = ["Codex"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.5.0", features = [] }

[dependencies]
rustfft = "6.4"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.9.0", features = ["image-png", "tray-icon"] }
windows = { version = "0.61.3", features = [
  "Win32_Media_Audio",
  "Win32_System_Com",
  "Win32_System_Com_StructuredStorage",
  "Win32_System_Variant"
] }
